fix notMatch result and change jdk support 8 , 17 is too high with not project need it