@@ -45,7 +45,7 @@
   <properties>
     <maven.test.skip>true</maven.test.skip>
     <revision>0.1.6-SNAPSHOT</revision>
-    <java.version>17</java.version>
+    <java.version>8</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -119,9 +119,33 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
+        <executions>
+          <execution>
+            <id>compile-jdk8</id>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+            <configuration>
+              <source>8</source>
+              <target>8</target>
+              <fork>true</fork>
+              <outputDirectory>${project.build.outputDirectory}_jdk8</outputDirectory>
+            </configuration>
+          </execution>
+<!--          <execution>-->
+<!--            <id>compile-jdk17</id>-->
+<!--            <goals>-->
+<!--              <goal>compile</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <source>8</source>-->
+<!--              <target>17</target>-->
+<!--              <fork>true</fork>-->
+<!--              <outputDirectory>${project.build.outputDirectory}_jdk17</outputDirectory>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+        </executions>
         <configuration>
-          <source>${java.version}</source> <!-- depending on your project -->
-          <target>${java.version}</target> <!-- depending on your project -->
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
@@ -130,7 +154,8 @@
             </path>
             <!-- other annotation processors -->
           </annotationProcessorPaths>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <!-- jdk8 not support compile args: enablePreview -->
+<!--          <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
         </configuration>
       </plugin>
       <!-- build with source -->
@@ -159,7 +184,9 @@
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>10.11.0</version>
+<!--            <version>10.11.0</version>-->
+            <!-- jdk8 support -->
+            <version>8.29</version>
           </dependency>
         </dependencies>
         <executions>
@@ -184,7 +211,9 @@
       <plugin>
         <groupId>io.github.git-commit-id</groupId>
         <artifactId>git-commit-id-maven-plugin</artifactId>
-        <version>6.0.0</version>
+<!--        <version>6.0.0</version>-->
+        <!-- jdk8 support -->
+        <version>4.9.9</version>
         <executions>
           <execution>
             <goals>
